2008-04-29  Frank Ch. Eigler  <fche@elastic.org>

	PR 6466
	* elaborate.cxx
	(dead_stmtexpr_remover): Expand scope to kill far more
	side-effect-free statemnets, including if/for/foreach.
	(semantic_pass_opt4): Warn on elided function/probe bodies.
	(typeresolution_info::visit_target_symbol): Dump parse tree of
	resolution-challenged functions/probes.
	(*): Adapt to probe->body being a statement*
	rather than a block*.
	* tapsets.cxx (*): Ditto.
	* staptree.cxx (block::block ctor): New cons constructor.
	* staptree.h: Corresponding changes.

2008-04-29  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl): Added
	death event handlers to ensure that for every utrace_attach there
	is a corresponding utrace_detach.
	(utrace_derived_probe_group::emit_module_decls): Ditto.

2008-04-28  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (translate_pass): Don't #define TEST_MODE.

2008-04-26  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (common_probe_entryfn_prologue): Undo
	clear of overload-related context vars; add explanation why.

2008-04-25  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Simplify configuration defaults.

2008-04-29  David Smith  <dsmith@redhat.com>:ChangeLog

2008-04-25  David Smith  <dsmith@redhat.com>

	PR 6455.
	* tapsets.cxx (mark_builder::build): Handles markers with no
	format string.

2008-04-24  Frank Ch. Eigler  <fche@elastic.org>

	PR 6454.
	* main.cxx (printscript): Avoid string truncation heuristics, and
	also avoid plain probe::printsig.  Hold nose and dig down into
	raw location lists instead.

2008-04-24  Will Cohen  <wcohen@redhat.com>

	* aclocal.m4: Regenerated.
	* Makefile.am (example/*): Moved to testsuite/systemtap.examples.
	* Makefile.in: Regenerated.

2008-04-23  Frank Ch. Eigler  <fche@elastic.org>

	From: Srinivasa DS <srinivasa@in.ibm.com>
	* tapsets.cxx (blacklisted_p): Blacklist more init/exit sections.

2008-04-23  Frank Ch. Eigler  <fche@elastic.org>
