@@ -1,3 +1,9 @@
+2008-04-30  Masami Hiramatsu  <mhiramat@redhat.com>
+
+	PR 6008
+	* main.cxx (main): Increase the limitation of buffer size to 4095MB.
+	* staprun.8.in: Ditto.
+
 2008-04-29  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 6466
